<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/lightBlue"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="60sp"
        android:layout_marginTop="60dp"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name"
        />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/button1"
        android:layout_marginTop="250dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/one_player_game_description"
        />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/button2"
        android:layout_marginTop="450dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/two_player_game_description"
        />

    <ImageView
        android:id="@+id/question_mark"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/question_button_description"
        android:src="@drawable/question" />

    <ImageView
        android:id="@+id/setting"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/setting_button_description"
        android:src="@drawable/setting" />

</RelativeLayout>